8358690: Some initialization code asks for AOT cache status way too early