src/hotspot/share/runtime/init.cpp
@@ -70,7 +70,7 @@ void VM_Version_init();
 void icache_init2();
 void initial_stubs_init();
 
-jint universe_init();           // depends on codeCache_init and initial_stubs_init
+jint universe_init();           // depends on codeCache_init
 // depends on universe_init, must be before interpreter_init (currently only on SPARC)
 void gc_barrier_stubs_init();
 void continuations_init();      // depends on flags (UseCompressedOops) and barrier sets
@@ -129,15 +129,10 @@ jint init_globals() {
   codeCache_init();
   VM_Version_init();              // depends on codeCache_init for emitting code
   icache_init2();                 // depends on VM_Version for choosing the mechanism
-  // stub routines in initial blob are referenced by later generated code
-  initial_stubs_init();
-  // stack overflow exception blob is referenced by the interpreter
-  SharedRuntime::generate_initial_stubs();
-  jint status = universe_init();  // dependent on codeCache_init and
-                                  // initial_stubs_init and metaspace_init.
-  if (status != JNI_OK)
+  jint status = universe_init();  // dependent on codeCache_init
+  if (status != JNI_OK) {
     return status;
-
+  }
 #ifdef LEAK_SANITIZER
   {
     // Register the Java heap with LSan.
@@ -145,8 +140,13 @@ jint init_globals() {
     LSAN_REGISTER_ROOT_REGION(summary.start(), summary.reserved_size());
   }
 #endif // LEAK_SANITIZER
-  AOTCodeCache::init2();     // depends on universe_init
+  AOTCodeCache::init2();     // depends on universe_init, must be before initial_stubs_init
   AsyncLogWriter::initialize();
+
+  initial_stubs_init();      // initial stub routines
+  // stack overflow exception blob is referenced by the interpreter
+  SharedRuntime::generate_initial_stubs();
+  AOTCodeCache::init_early_stubs_table();  // need this after initial_stubs
   gc_barrier_stubs_init();   // depends on universe_init, must be before interpreter_init
   continuations_init();      // must precede continuation stub generation
   continuation_stubs_init(); // depends on continuations_init
